 * Added a cloud_max and cloud_min option to groups, the max and min % in a 
    cloud at the top of the groups page.
 * Changed the "#foo" links in groups to be "#group_foo" to avoid clashing
    if imported into an external site.
 * Another option, jump=plain, will supress the phrase around the group jump
    links, just showing the links themselves.
 * The option "tags" causes the fields values to be broken up on ";" and ","
    before being grouped. This works well on the keywords field. Fixing #3340
 * New option "truncate=XXX" to truncate values to "n" chars. Handy on dates
    to truncate to year only. Fixing #3343.
 * New option "string", mostly used internally, which indicates to use the 
    string value as is, rather than call the renderer function for the  
    field.
 * New option on groups: first_initial, which only works on names, but
    causes them to be grouped by surname and only the first letter of the 
    given name.

2008-04-17 tdb
 * Removed redundant, unused "tags_and_labels" from DataObjs
 * BibTeX import
 	- fixed numeric ids not being parsed correctly
	- ignore the case of NAMES
	- don't decode_latex URLs or URIs

2008-04-21 tdb,dct05r
 * Added store/retrieval methods to DataObj
 * Modified Document to store and retrieve files via Storage layer
 * Added Storage abstraction layer EPrints::Storage that uses Storage plugins
 * Added Storage::Local plugin for legacy EPrints file system
 * Added security checks to Storage layer-based document retrieval

2008-04-22 tdb
 * Added more POD for Storage layer changes
 * Added $bucket argument to Storage layer API
 * Added get_mime_type() method to DataObj
 * Replaced duplicated URL parsing in Apache::Storage with passed pnotes

2008-04-24 tdb
 * Added a simple default citation style for imports
 * import->run() now replaces existing records and pulls in full-texts
 * Fixed <img> link to EPrints logo for default template

2008-04-25 tdb
 * Use the EPrint object to render fileinfo
